Fix z-index

--- a/src/components/stars/stars.module.css
+++ b/src/components/stars/stars.module.css
@@ -15,5 +15,5 @@
   height: 100%;
   transform-origin: 0 0;
   transform: translateZ(-1px) scale(2);
-  z-index: -1;
+  z-index: -2;
 }
